--- a/CyclistClub.WPF/MainWindow.xaml
+++ b/CyclistClub.WPF/MainWindow.xaml
@@ -6,7 +6,36 @@
         xmlns:local="clr-namespace:CyclistClub.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <StackPanel Orientation="Horizontal">
+
+        <StackPanel Margin="10" 
+                    Width="250">
+            <Label Content="Login" 
+               HorizontalAlignment="Center" 
+               FontSize="30"/>
+            <Label Content="Email"
+                   Margin="10,0,10,0"
+              />
+            <TextBox 
+            FontSize="20" 
+            Margin="10"
+            x:Name="tbEmail"
+            Text="{Binding Email}"/>
+            <Label 
+                Content="Fullname"
+                Margin="10,0,10,0"
+              />
+            <TextBox 
+            FontSize="20" 
+            Margin="10"
+            x:Name="txtFullname"
+            Text ="{Binding FullName}"
+            />
+            <Button Content="Connect"
+                x:Name="BtnConnect"
+                FontSize="20"
+                Margin="9,10,10.6,10"
+                Click="BtnConnect_Click"/>
+        </StackPanel>
+    </StackPanel>
 </Window>
