--- a/CyclistClub.WPF/FrmInscription.xaml
+++ b/CyclistClub.WPF/FrmInscription.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="CyclistClub.WPF.FrmAddMembre"
+﻿<Window x:Class="CyclistClub.WPF.FrmInscription"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CyclistClub.WPF"
         mc:Ignorable="d"
-        Title="FrmAddMembre" Height="500" Width="800">
+        Title="FrmInscription" Height="600" Width="800">
     <StackPanel Orientation="Horizontal">
         <StackPanel Margin="10" 
                     Width="310">
@@ -49,11 +49,7 @@
             Margin="10"
             x:Name="txtPassword"
             />
-            <Button Content="Ajouter un profile"
-                x:Name="btnAddPicture"
-                FontSize="20"
-                Margin="10,10,10.4,10"
-                Click="btnAddPicture_Click"/>
+
 
             <Button Content="S'inscrire"
                 x:Name="btnAdd"
@@ -61,12 +57,29 @@
                 Margin="10"
                 Click="btnAdd_Click"/>
         </StackPanel>
-        <Image Name="imgPhoto"
-               Width="345"
+        <StackPanel Margin="0,0,0,0.4" Width="395"> 
+
+            <Image Name="imgPhoto"
+               Width="226"
                HorizontalAlignment="Right"
-               Margin="0,32,0,126"
-               Stretch="Fill"
-               />
+            />
+            <Button Content="Ajouter un profile"
+                x:Name="btnAddPicture"
+                FontSize="20"
+                Margin="10,10,10.4,10"
+                Click="btnAddPicture_Click"/>
+            <Label Content="Montent de la cotisation"/>
+            <TextBox x:Name="tbMontentCotisation"/>
+            <StackPanel Orientation="Horizontal">
+                <RadioButton FontSize="20" Content="rendoneur"/>
+                <RadioButton FontSize="20" Content="descendeur"/>
+                <RadioButton FontSize="20" Content="trialiste"/>
+                <RadioButton FontSize="20" Content="cyclo"/>
+            </StackPanel>
+
+
+        </StackPanel>
+        
 
     </StackPanel>
 </Window>
